WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196192
[WinCairo] WebProcessDataStoreParameters.h(32): error C2653: 'SandboxExtension': is not a class or namespace name
https://bugs.webkit.org/show_bug.cgi?id=196192
Summary
[WinCairo] WebProcessDataStoreParameters.h(32): error C2653: 'SandboxExtensio...
Fujii Hironori
Reported
2019-03-24 21:24:39 PDT
WinCairo builds get broken.
> "C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Tools\MSVC\14.14.26428\bin\Hostx64\x64\cl.exe" (...) -c ..\..\Source\WebKit\WebProcess\MediaCache\WebMediaKeyStorageManager.cpp > C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\Shared\WebProcessDataStoreParameters.h(32): error C2653: 'SandboxExtension': is not a class or namespace name > C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\Shared\WebProcessDataStoreParameters.h(32): error C3646: 'applicationCacheDirectoryExtensionHandle': unknown override specifier > C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\Shared\WebProcessDataStoreParameters.h(32): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int > C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\Shared\WebProcessDataStoreParameters.h(35): error C2653: 'SandboxExtension': is not a class or namespace name > C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\Shared\WebProcessDataStoreParameters.h(35): error C3646: 'webSQLDatabaseDirectoryExtensionHandle': unknown override specifier > C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\Shared\WebProcessDataStoreParameters.h(35): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int > C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\Shared\WebProcessDataStoreParameters.h(37): error C2653: 'SandboxExtension': is not a class or namespace name > C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\Shared\WebProcessDataStoreParameters.h(37): error C3646: 'mediaCacheDirectoryExtensionHandle': unknown override specifier > C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\Shared\WebProcessDataStoreParameters.h(37): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int > C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\Shared\WebProcessDataStoreParameters.h(39): error C2653: 'SandboxExtension': is not a class or namespace name > C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\Shared\WebProcessDataStoreParameters.h(39): error C3646: 'mediaKeyStorageDirectoryExtensionHandle': unknown override specifier > C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\Shared\WebProcessDataStoreParameters.h(39): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int > C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\Shared\WebProcessDataStoreParameters.h(41): error C2653: 'SandboxExtension': is not a class or namespace name > C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\Shared\WebProcessDataStoreParameters.h(41): error C3646: 'javaScriptConfigurationDirectoryExtensionHandle': unknown override specifier > C:\WebKit-BuildWorker\wincairo-wkl-debug\build\Source\WebKit\Shared\WebProcessDataStoreParameters.h(41): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int
Attachments
Patch
(1.18 KB, patch)
2019-03-24 21:27 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2019-03-24 21:27:42 PDT
Created
attachment 365846
[details]
Patch
WebKit Commit Bot
Comment 2
2019-03-24 22:09:34 PDT
Comment on
attachment 365846
[details]
Patch Clearing flags on attachment: 365846 Committed
r243430
: <
https://trac.webkit.org/changeset/243430
>
WebKit Commit Bot
Comment 3
2019-03-24 22:09:35 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-03-24 22:10:19 PDT
<
rdar://problem/49204922
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug