[WinCairo] WebProcessDataStoreParameters.h(32): error C2653: 'SandboxExtension': is not a class or namespace name https://bugs.webkit.org/show_bug.cgi?id=196192

Unreviewed for WinCairo port.


* Shared/WebProcessDataStoreParameters.h: Added #include "SandboxExtension.h".


Canonical link: https://commits.webkit.org/210485@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243430 268f45cc-cd09-0410-ab3c-d52691b4dbfc